<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuASMR"
    android:background="@drawable/appback2">

    <TextView
        android:id="@+id/textASMR"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-1dp"
        android:text="@string/titleASMR"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/titleASMR"
        android:layout_width="410dp"
        android:layout_height="534dp"
        android:layout_above="@+id/ytASMR"
        android:layout_below="@+id/textASMR"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="33dp"
        android:text="@string/textASMR"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/ytASMR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/buttox" />

</RelativeLayout>